# Generated by Django 4.2.7 on 2025-08-11 00:27

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('estudiantes', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='TipoActividad',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('descripcion', models.TextField(blank=True)),
            ],
        ),
        migrations.CreateModel(
            name='Actividad',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=200)),
                ('descripcion', models.TextField()),
                ('fecha_inicio', models.DateField()),
                ('fecha_fin', models.DateField()),
                ('monto_por_estudiante', models.DecimalField(decimal_places=0, max_digits=10)),
                ('estado', models.CharField(choices=[('planificada', 'Planificada'), ('activa', 'Activa'), ('finalizada', 'Finalizada'), ('cancelada', 'Cancelada')], default='planificada', max_length=20)),
                ('fecha_creacion', models.DateTimeField(auto_now_add=True)),
                ('cursos_asignados', models.ManyToManyField(to='estudiantes.curso')),
                ('tipo', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='actividades.tipoactividad')),
            ],
        ),
    ]
