# Generated by Django 4.2.7 on 2025-08-11 01:34

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('actividades', '0001_initial'),
        ('estudiantes', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='CuotaEstudiante',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('monto_total', models.DecimalField(decimal_places=0, max_digits=10)),
                ('monto_pagado', models.DecimalField(decimal_places=0, default=0, max_digits=10)),
                ('estado', models.CharField(choices=[('pendiente', 'Pendiente'), ('pagado', 'Pagado'), ('vencido', 'Vencido'), ('exento', 'Exento')], default='pendiente', max_length=20)),
                ('fecha_vencimiento', models.DateField()),
                ('fecha_creacion', models.DateTimeField(auto_now_add=True)),
                ('actividad', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='actividades.actividad')),
                ('estudiante', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='estudiantes.estudiante')),
            ],
        ),
        migrations.CreateModel(
            name='PagoCuota',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('monto', models.DecimalField(decimal_places=0, max_digits=10)),
                ('metodo_pago', models.CharField(choices=[('efectivo', 'Efectivo'), ('transferencia', 'Transferencia'), ('cheque', 'Cheque'), ('tarjeta', 'Tarjeta')], max_length=20)),
                ('fecha_pago', models.DateTimeField(auto_now_add=True)),
                ('observacion', models.TextField(blank=True)),
                ('comprobante', models.CharField(blank=True, max_length=100)),
                ('cuota', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='cuotas.cuotaestudiante')),
            ],
        ),
    ]
